--- a/marc/templates/marc/question_detail.html
+++ b/marc/templates/marc/question_detail.html
@@ -3,3 +3,9 @@
 <div>
     {{ question.content }}
 </div>
+
+<form action="{% 'marc:answer_create' question.id %}" method="post">
+    {% csrf_token %}
+    <textarea name="content" id="content" row="15"></textarea>
+    <input type="submit' value="답변등록">
+</form>
