--- a/marc/templates/marc/question_detail.html
+++ b/marc/templates/marc/question_detail.html
@@ -5,7 +5,7 @@
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ question.context }}</div>
+            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2">
                     {{ question.create_date }}
@@ -58,11 +58,42 @@
     <!-- 답변 등록 -->
     <form action="{% url 'marc:answer_create' question.id %}" method="post" class="my-3">
         {% csrf_token %}
-        <div class="mb-3">
-            <label for="count" class="form-label">답변내용</label>
-            <textarea name="content" id="content" class="form-control" rows="'10"></textarea>
-            <input type="submit" value="답변등록" class="btn btn-primary my-3">
+        <!-- 오류표시 Start -->
+        {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            {% for field in form %}
+            {% if field.errors %}
+            <div>
+                <strong>{{ field.label }}</strong>
+                {{ field.errors }}
+            </div>
+            {% endif %}
+            {% endfor %}
         </div>
+        {% endif %}
+        <!-- 오류표시 End -->
+        <div class="form-group">
+            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+        </div>
+        <input type="submit" value="답변등록" class="btn btn-primary">
+
+
+<!--        <div class="mb-3">-->
+<!--            <label for="subject" class="form-label">제목</label>-->
+<!--            <input type="text" class="form-control" name="subject" id="subject"-->
+<!--            value="{{ form.subject.value|default_if_none:'' }}">-->
+<!--        </div>-->
+<!--        <div class="mb-3">-->
+<!--            <label for="content" class="form-control">내용</label>-->
+<!--            <textarea class="form-control" name="content"-->
+<!--                      id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>-->
+<!--        </div>-->
+<!--        <button type="submit" class="btn btn-primary">저장하기</button>-->
+<!--        <div class="mb-3">-->
+<!--            <label for="count" class="form-label">답변내용</label>-->
+<!--            <textarea name="content" id="content" class="form-control" rows="'10"></textarea>-->
+<!--            <input type="submit" value="답변등록" class="btn btn-primary my-3">-->
+<!--        </div>-->
     </form>
 </div>
 {% endblock %}
