--- a/templates/marc/question_detail.html
+++ b/templates/marc/question_detail.html
@@ -1,6 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container my-3">
+    <!-- nessages 표시-->
+    {% if messages %}
+    <div class="alert alert-danger my-3" role="alert">
+        {% for message in messages %}
+            <strong>{{ message.tags }}</strong>
+            <ul><li>{{ message.message }}</li></ul>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <!-- 질문 -->
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
@@ -16,6 +26,8 @@
                 {% if request.user == question.author %}
                 <a href="{% url 'marc:question_modify' question.id  %}"
                    class="btn btn-sm btn-outline-secondary">수정</a>
+                <a href="javacript:void(0)" class="delete btn btn-sm btn-outline-secondary"
+                   data-url="{% url 'marc:question_delete' question.id %}">삭제</a>
                 {% endif %}
             </div>
         </div>
@@ -112,4 +124,16 @@
         <!--        </div>-->
     </form>
 </div>
+{% endblock %}
+{% block script %}
+<script type='text/javascript'>
+    const delete_elements = document.getElementByClassName("delete");
+    Array.from(delete_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            if(confirm("정말로 삭제하시겠습니까?")) {
+                location.href = this.dataset.uri;
+            };
+        }
+    });
+</script>
 {% endblock %}
