--- a/templates/marc/question_detail.html
+++ b/templates/marc/question_detail.html
@@ -5,8 +5,10 @@
     {% if messages %}
     <div class="alert alert-danger my-3" role="alert">
         {% for message in messages %}
-            <strong>{{ message.tags }}</strong>
-            <ul><li>{{ message.message }}</li></ul>
+        <strong>{{ message.tags }}</strong>
+        <ul>
+            <li>{{ message.message }}</li>
+        </ul>
         {% endfor %}
     </div>
     {% endif %}
@@ -38,15 +40,24 @@
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
-            <div class="d=flex justify-content-end">
-                <div class="badge bh-light text-dark p-2">
-                    {{ answer.create_date }}
+            <div class="d-flex justify-content-end">
+                {% if answer.modify_date %}
+                <div class="badge bg-light text-dark p-2 text-start mx-3">
+                    <div class="mb-2">modified at</div>
+                    <div>{{ answer.modify_date }}</div>
+                </div>
+                {% endif %}
+
+                <div class="badge bh-light text-dark p-2 text-start">
+                    <div class="mb-2">{{ question.author.username }}</div>
+                    <div>{{ answer.create_date }}</div>
                 </div>
             </div>
             <div>
                 {% if request.user == answer.author %}
                 <a href="{% url 'marc:answer_modify' answer.id %}" class="btn btn-sm btn-outline-secondary ">수정</a>
-                <a href="#" class="delete btn btn-sm btn-outline-secondary" data-uri="{% url 'marc:answer_delete' answer.id %}">삭제</a>
+                <a href="#" class="delete btn btn-sm btn-outline-secondary"
+                   data-uri="{% url 'marc:answer_delete' answer.id %}">삭제</a>
                 {% endif %}
 
             </div>
@@ -80,6 +91,8 @@
             $(this).remove();
         });
     }, 4000);
+
+
     </script>
 
 
@@ -141,5 +154,7 @@ Array.from(delete_elements).forEach(function(element) {
         };
     });
 });
+
+
 </script>
 {% endblock %}
