--- a/templates/marc/question_form.html
+++ b/templates/marc/question_form.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="container">
-    <h5 class="my-3 border-bottom pb-2">질문등록</h5>
-    <form method="post">
+    <h5 class="my-3 border-bottom pb-2">교육등록</h5>
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <!-- 오류표시 Start -->
         {% if form.errors %}
@@ -20,14 +20,25 @@
         {% endif %}
         <!-- 오류표시 End -->
         <div class="mb-3">
-            <label for="subject" class="form-label">제목</label>
+            <label for="subject" class="form-label">교육명</label>
             <input type="text" class="form-control" name="subject" id="subject"
                    value="{{ form.subject.value|default_if_none:'' }}">
         </div>
         <div class="mb-3">
-            <label for="content" class="form-label">내용</label>
+            <label for="content" class="form-label">교육내용</label>
             <textarea class="form-control" name="content"
                       id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
+        </div>
+        <div class="mb-3">
+            <label for="content" class="form-label">첨부 파일1</label>
+               <p>{{ form.non_field_errors }}</p>
+            <p>{{ form.docfile.label_tag }} {{ form.docfile.help_text }}</p>
+            <p>
+                {{ form.docfile.errors }}
+                {{ form.docfile }}
+            </p>
+            <input type="file" class="form-control" name="docfile1" id="docfile1"
+                   value="{{ form.docfile1.value }}">
         </div>
         <button type="submit" class="btn btn-primary">저장하기</button>
     </form>
