--- a/templates/marc/question_detail.html
+++ b/templates/marc/question_detail.html
@@ -18,6 +18,7 @@
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
+            <div class="card-text" style="white-space: pre-line;">{{ question.docfile1 }}</div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">{{ question.author.username }}</div>
@@ -33,6 +34,15 @@
                 {% endif %}
             </div>
         </div>
+    </div>
+    <div>
+        <label>첨부 파일</label>
+        <div>{{ document.get_filename }}</div>
+        <form action='{% url "marc:download" document_id=document.pk %}'>
+            <button type="submit">
+                다운로드
+            </button>
+        </form>
     </div>
     <!-- 답변 -->
     <h5 class="border-bottom my-3 py-2">{{ question.answer_set.count }} 개의 답변이 있습니다.</h5>
@@ -91,6 +101,7 @@
             $(this).remove();
         });
     }, 4000);
+
 
 
     </script>
@@ -154,6 +165,7 @@ Array.from(delete_elements).forEach(function(element) {
         };
     });
 });
+
 
 
 </script>
