--- a/templates/marc/question_form.html
+++ b/templates/marc/question_form.html
@@ -40,6 +40,23 @@
             <input type="file" class="form-control" name="docfile1" id="docfile1"
                    value="{{ form.docfile1.value }}">
         </div>
+
+         <div class="mb-3">
+            <label for="content" class="form-label">첨부 파일2</label>
+               <p>{{ form.non_field_errors }}</p>
+            <p>{{ form.docfile.label_tag }} {{ form.docfile.help_text }}</p>
+            <p>
+                {{ form.docfile.errors }}
+                {{ form.docfile }}
+            </p>
+            <input type="file" class="form-control" name="docfile2" id="docfile2"
+                   value="{{ form.docfile2.value }}">
+        </div>
+
+
+        <div>
+
+        </div>
         <button type="submit" class="btn btn-primary">저장하기</button>
     </form>
 </div>
