--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
 <!-- Bootstrap JS -->
 <script src="{% static 'bootstrap.min.js' %}"></script>
+<script src="{% static 'jquery-3.6.1.min.js' %}"></script>
 <!-- 자바스크립트 start -->
 {% block script %}
 {% endblock %}
