--- a/templates/marc/question_detail.html
+++ b/templates/marc/question_detail.html
@@ -17,8 +17,7 @@
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
-            <div class="card-text" style="white-space: pre-line;">{{ question.docfile1 }}</div>
+            <div class="card-text content-size" style="white-space: pre-line;">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">{{ question.author.username }}</div>
@@ -37,9 +36,15 @@
     </div>
     <div>
         <label>첨부 파일</label>
-        <div>{{ document.get_filename }}</div>
-        <form action='{% url "marc:download" document_id=document.pk %}'>
-            <button type="submit">
+        <div><a href="{% url 'marc:download_view' question.id %}">{{ question.docfile1.name }}</a></div>
+        <div><a href="{% url 'marc:download_view' question.id %}">{{ question.docfile2.name }}</a></div>
+
+    </div>
+    <div>
+        <label>첨부 파일</label>
+        <div>{{ question.docfile1.name }}</div>
+        <form action="{% url 'marc:download_view' question.id %}">
+            <button id="add_feed" type="submit" >
                 다운로드
             </button>
         </form>
@@ -49,7 +54,7 @@
     {% for answer in question.answer_set.all %}
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+            <div class="card-text content-size" style="white-space: pre-line;">{{ answer.content }}</div>
             <div class="d-flex justify-content-end">
                 {% if answer.modify_date %}
                 <div class="badge bg-light text-dark p-2 text-start mx-3">
